--- a/assets/index.less
+++ b/assets/index.less
@@ -1,3 +1,34 @@
-.test {
-  color: red;
+.ant-btn {
+  font-size: 14px;
+  &-primary {
+    background-color: blue;
+    color: white;
+  }
+  &-dashed {
+    border: 1px dashed #ddd;
+  }
+  &-danger {
+    color: red;
+  }
+  &-circle {
+    border-radius: 50%;
+    width: 28px;
+    padding: 0;
+    font-size: 14px;
+    height: 28px;
+  }
+  &[disabled] {
+    color: rgba(0, 0, 0, .25);
+    background-color: #f7f7f7;
+    border-color: #d9d9d9;
+    cursor: not-allowed;
+  }
+}
+.ant-btn-background-ghost {
+  background: transparent!important;
+}
+.anticon {
+  display: inline-block;
+  width: 10px;
+  height: 10px;
 }
