--- a/assets/index.less
+++ b/assets/index.less
@@ -1,34 +1,5 @@
-.ant-btn {
-  font-size: 14px;
-  &-primary {
-    background-color: blue;
-    color: white;
+.ant-btn-group {
+  .ant-btn {
+    float: left;
   }
-  &-dashed {
-    border: 1px dashed #ddd;
-  }
-  &-danger {
-    color: red;
-  }
-  &-circle {
-    border-radius: 50%;
-    width: 28px;
-    padding: 0;
-    font-size: 14px;
-    height: 28px;
-  }
-  &[disabled] {
-    color: rgba(0, 0, 0, .25);
-    background-color: #f7f7f7;
-    border-color: #d9d9d9;
-    cursor: not-allowed;
-  }
-}
-.ant-btn-background-ghost {
-  background: transparent!important;
-}
-.anticon {
-  display: inline-block;
-  width: 10px;
-  height: 10px;
 }
